@@ -1,92 +1,0 @@
-<?xml version="1.0" encoding="utf-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-   <modelVersion>4.0.0</modelVersion>
-   <parent>
-       <groupId>fr.soleil</groupId>
-       <artifactId>super-pom-C-CPP</artifactId>
-       <version>RELEASE</version>
-   </parent>
-   <groupId>fr.soleil.lib</groupId>
-   <artifactId>HKL-${aol}-shared-${mode}</artifactId>
-   <version>5.2.2</version>
-   <packaging>nar</packaging>
-   <name>HKL</name>
-   <description>HKL library</description>
-   <developers>
-       <developer>
-           <id>picca</id>
-           <name>Frédéric-Emmanuel Picca</name>
-           <email>picca@synchrotron-soleil.fr</email>
-           <url>http://www.synchrotron-soleil.fr</url>
-           <organization>Synchrotron Soleil</organization>
-           <organizationUrl>http://www.synchrotron-soleil.fr</organizationUrl>
-           <roles>
-               <role>developer</role>
-           </roles>
-           <timezone>1</timezone>
-       </developer>
-   </developers>
-   <contributors>
-       <contributor>
-           <name>Vincent Delos</name>
-           <email>vincent.delos@synchrotron-soleil.fr</email>
-           <url>http://www.synchrotron-soleil.fr</url>
-           <organization>Synchrotron Soleil</organization>
-           <organizationUrl>http://www.synchrotron-soleil.fr</organizationUrl>
-           <roles>
-               <role>developer for the 1rst version</role>
-           </roles>
-           <timezone>1</timezone>
-       </contributor>
-   </contributors>
-   <scm>
-       <connection>scm:git:git://repo.or.cz/hkl.git</connection>
-       <developerConnection>scm:git:ssh://repo.or.cz/srv/hkl.git</developerConnection>
-       <url>http://repo.or.cz/w/hkl.git</url>
-   </scm>
-   <build>
-       <plugins>
-           <plugin>
-               <groupId>org.freehep</groupId>
-               <artifactId>freehep-nar-plugin</artifactId>
-               <configuration>
-                   <libraries>
-                       <library>
-                           <type>shared</type>
-                           <subSystem>gui</subSystem>
-                       </library>
-                   </libraries>
-                   <c>
-                       <sourceDirectory>${project.basedir}</sourceDirectory>
-                       <excludes>
-                           <exclude>hkl-types.c</exclude>
-                           <exclude>ccan/configurator.c</exclude>
-			   <exclude>api2/hkl2.c</exclude>
-                       </excludes>
-                       <defines>
-                           <define>LOGGING</define>
-                       </defines>
-                       <includePaths>
-                           <includePath>/usr/include/glib-2.0</includePath>
-                           <includePath>/usr/lib/glib-2.0/include</includePath>
-                           <includePath>${project.basedir}</includePath>
-                           <includePath>${project.basedir}</includePath>
-                           <includePath>${project.basedir}/..</includePath>
-                           <includePath>${project.basedir}/../third-party</includePath>
-                           <includePath>${project.basedir}/../ica/centos6/</includePath>
-                       </includePaths>
-                       <options>
-                           <option>-std=gnu99</option>
-                       </options>
-                   </c>
-               </configuration>
-           </plugin>
-       </plugins>
-   </build>
-   <dependencies>
-       <dependency>
-           <groupId>org.gnu</groupId>
-           <artifactId>GSL-${aol}-${library}-release</artifactId>
-       </dependency>
-   </dependencies>
-</project>
